correction swagger.js permettant l'affichage des parametres dans les requetes
